chore: add memory configurations